k8s/subscription-manager/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-manager
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: subscription-manager
    app: subscription-manager
