k8s/subscription-manager/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription-manager
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd'
spec:
  rules:
    - host: subscription-manager.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscription-manager
                port:
                  name: http
  tls:
    - hosts:
        - subscription-manager.tryrocket.cloud
      secretName: subscription-manager-tryrocket-cloud-production-tls
